[project]
name = "price-analytics-pipeline"
version = "0.1.0"
description = "Pipeline de dados E2E de preços"
authors = [
    {name = "Lenon Torma",email = "lenoncastro18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
