[tool.poetry]
name = "price-analytics-pipeline"
version = "0.1.0"
description = "Pipeline de dados E2E de preços"
authors = ["Lenon Torma <lenoncastro18@gmail.com>"]
readme = "README.md"
packages = [{include = "price_analytics_pipeline", from = "src"}]

[tool.poetry.dependencies]
# -----------------------------------------------------------------
# Versão do Python: Alterado para 3.10 por estabilidade.
# 3.13 é muito novo e não terá suporte das bibliotecas de dados.
# -----------------------------------------------------------------
python = "^3.11"

# 1. Dependências Principais (Core)
requests = "^2.31.0"      # Para chamadas de API (XHR)
boto3 = "^1.34.0"         # SDK da AWS (para S3)
PyYAML = "^6.0"           # Para carregar config/config.yml
python-dotenv = "^1.0.0"  # Para carregar .env localmente

# 2. Dependências de Transformação (DBT)
dbt-core = "^1.8.0"
dbt-duckdb = "^1.8.0"     # Adapter para DuckDB (lerá S3)

# 3. Fallback (Opcional, se a API falhar)
beautifulsoup4 = {version = "^4.12.0", optional = true}
lxml = {version = "^5.2.0", optional = true}
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
# 4. Dependências de Desenvolvimento (Testes e Qualidade)
pytest = "^8.2.0"
black = "^24.4.0"
ruff = "^0.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"